--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,6 +33,8 @@ test:
     - pip check
   imports:
     - gitlab
+  requires:
+    - pip
 
 about:
   home: https://github.com/python-gitlab/python-gitlab
